--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             per month
           </h3>
           <p>Full access for less than &dollar;1 a day</p>
-          <a href="#">Sign Up</a>
+          <a href="#" class="signup">Sign Up</a>
         </div>
         <div class="right">
           <h2>Why Us</h2>
